--- a/calientitoapp-web/src/app/components/index/password/password.component.html
+++ b/calientitoapp-web/src/app/components/index/password/password.component.html
@@ -6,48 +6,59 @@
     <div class="w-full h-48  items-center justify-center rounded-2xl pr-[0em] min-[1330px]:pr-[6em] bg-yellow2">
       <div class="flex justify-between pt-5">
         <div>
-          <button type="submit" (click)="volver()" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8">
+          <button type="submit" (click)="volver()" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8" title="volver">
             <fa-icon [icon]="faChevronLeft"></fa-icon>
           </button>
         </div>
         <div>
-            <button type="submit" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8">
+            <button type="submit" class="rounded-full text-lg font-semibold text-white font-sans w-28 h-8" title="v">
               <fa-icon [icon]="faBars"></fa-icon>
             </button>
         </div>
       </div>
       <div>
-        <p class="text-white font-bold flex justify-center ml-5 mt-12 text-4xl">CREATE YOUR ACCOUNT</p>
+        <p class="text-white font-bold flex justify-center ml-5 mt-12 text-4xl">CREA TU CUENTA</p>
       </div>
     </div>
     <div class="pr-7 pl-7  py-5">
       <form class="space-y-6 mb-7" [formGroup]="form">
-
         <div>
-          <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
-            holder="Email"></app-field-input>
+          <app-field-input [parentForm]="form" fieldName="name" formControlName="name"
+            holder="Nombre">Nombre</app-field-input>
+        </div>
+        <div>
+          <app-field-input [parentForm]="form" fieldName="lastName" formControlName="lastName"
+            holder="Apellido">Apellido</app-field-input>
         </div>
         <div>
           <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
-            holder="Full Name"></app-field-input>
-        </div>
-        <div>
-          <app-field-input [parentForm]="form" fieldName="userName" formControlName="userName"
-            holder="Username"></app-field-input>
+            holder="Nombre de usuario">Nombre de usuario</app-field-input>
         </div>
         <div>
           <app-field-input type="password" holder="Contraseña" [parentForm]="form" fieldName="password"
-            formControlName="password"></app-field-input>
+            formControlName="password">Contraseña</app-field-input>
         </div>
         <div>
-          <app-field-input type="password" holder="Contraseña" [parentForm]="form" fieldName="password"
-            formControlName="Repeat password"></app-field-input>
+          <app-field-input type="password" holder="Contraseña" [parentForm]="form" fieldName="repeatPassword"
+            formControlName="repeatPassword">Confirmar contraseña</app-field-input>
         </div>
+        <div class=" max-[419px]:absolute max-[351px]:relative max-[460px]:relative flex items-center space-x-2">
+        <span>Seleccione un perfil  </span>
+        <input type="checkbox" id="mi-checkbox1" (click)="Checked(1, $event.target)" [checked]="false"
+          class="remember-me form-checkbox h-5 w-5" title="admi">
+        <label for="mi-checkbox" class="text-xs sm:text-sm text-gray1">Administrador </label>
+        <input type="checkbox" id="mi-checkbox1" (click)="Checked(2, $event.target)" [checked]="false"
+          class="remember-me form-checkbox h-5 w-5" title="pan">
+        <label for="mi-checkbox" class="text-xs sm:text-sm text-gray1">Panaderia </label>
+        <input type="checkbox" id="mi-checkbox1" (click)="Checked(3, $event.target)" [checked]="false"
+          class="remember-me form-checkbox h-5 w-5" title="client">
+        <label for="mi-checkbox" class="text-xs sm:text-sm text-gray1">Cliente </label>
+      </div>
 
       </form>
       <div class="ButtonIngresar">
-          <button type="submit" class="flex items-center justify-center max-[350px]:ml-0 rounded-full py-3 px-6 text-lg font-semibold   xl:text-base bg-yellow2 text-white font-sans w-full h-10">
-            <span>Create Account</span>
+          <button type="submit" (click)="Register()" class="flex items-center justify-center max-[350px]:ml-0 rounded-full py-3 px-6 text-lg font-semibold   xl:text-base bg-yellow2 text-white font-sans w-full h-10">
+            <span>Crear cuenta</span>
           </button>
       </div>
     </div>
