--- a/calientitoapp-web/src/app/components/page/bakeries/bakeries.component.html
+++ b/calientitoapp-web/src/app/components/page/bakeries/bakeries.component.html
@@ -23,13 +23,13 @@
             <span>About Us</span>
           </a>
         </li>
-        <li class="py-1">
+        <li class="py-1" *ngIf="dataUser.idPerfil != 2">
           <a routerLink="/likes" class="px-4 flex justify-end border-r-4 border-white">
             <span>Favorites</span>
             <fa-icon class="w-5 ml-2" [icon]="faHeart"></fa-icon>
           </a>
         </li>
-        <li class="py-1">
+        <li class="py-1" *ngIf="dataUser.idPerfil != 3 && dataUser.idPerfil != 2">
           <a routerLink="/configuration" class="px-4 flex justify-end border-r-4 border-white">
             <span>Configuration</span>
             <fa-icon class="w-5 ml-2" [icon]="faGears"></fa-icon>
@@ -47,7 +47,7 @@
             <fa-icon class="w-5 ml-2" [icon]="faCircleQuestion"></fa-icon>
           </a>
         </li>
-        <li class="py-1">
+        <li class="py-1" *ngIf="dataUser.idPerfil != 2">
           <a routerLink="/bakeries" class="px-4 flex justify-end border-r-4 border-white">
             <span>Bakeries</span>
             <fa-icon class="w-5 ml-2" [icon]="faStore"></fa-icon>
@@ -59,13 +59,13 @@
             <fa-icon class="w-5 ml-2" [icon]="faBreadSlice"></fa-icon>
           </a>
         </li>
-        <li class="py-1">
+        <li class="py-1" *ngIf="dataUser.idPerfil != 2">
           <a routerLink="/maps" class="px-4 flex justify-end border-r-4 border-white">
             <span>Maps</span>
             <fa-icon class="w-5 ml-2" [icon]="faMapLocationDot"></fa-icon>
           </a>
         </li>
-        <li class="py-1">
+        <li class="py-1" *ngIf="dataUser.idPerfil != 2 && dataUser.idPerfil != 3">
           <a routerLink="/shoppingCart" class="px-4 flex justify-end border-r-4 border-white">
             <span>Shopping Cart</span>
             <fa-icon class="w-5 ml-2" [icon]="faCartShopping"></fa-icon>
@@ -82,43 +82,23 @@
     </div>
 
     <header>
-      <h2 class="text-gray-700 text-6xl font-semibold flex justify-center">Pan Caliente</h2>
+      <h2 class="text-gray-700 text-6xl font-semibold flex justify-center">Panaderias</h2>
       <!-- <h3 class="text-2xl font-semibold">Calientito app</h3> -->
     </header>
 
     <div>
-      <div class="mt-8 grid lg:grid-cols-3 gap-10">
+      <div class="mt-8 grid lg:grid-cols-3 gap-10" *ngFor="let item of listBakeries; let i = index">
         <!-- cards go here -->
         <button (click)="OnProducts()">
           <div class="bg-yellow2 rounded over-flow-hidden shadow-md relative hover:shadow-lg">
             <img src="assets/img/personal_panaderia.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
             <div class="m-4">
 
-              <span class="font-bold flex justify-center">Panaderia 1</span>
+              <span class="font-bold flex justify-center">{{item.name}}</span>
             </div>
           </div>
         </button>
-
-         <div class="bg-yellow2 rounded overflow-hidden shadow-md relative hover:shadow-lg">
-          <img src="assets/img/decoraciones.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
-          <div class="m-4">
-            <span class="font-bold flex justify-center">Panaderia 2</span>
-          </div>
-         </div>
-
-         <div class="bg-yellow2 rounded overflow-hidden shadow-md relative hover:shadow-lg">
-          <img src="assets/img/croissant.jpg" alt="croissant" class="w-full h-32 sm:h-48 object-cover">
-          <div class="m-4">
-            <span class="font-bold flex justify-center">Panaderia 3</span>
-          </div>
-         </div>
       </div>
-
-
-
-      <!-- <div class="flex justify-center mt-10">
-        <div class="btn bg-secondary-100 text-secondary-200 hover:shadow-inner transform hover:scale-125 hover:bg-opacity-50 transition ease-out duration-300">Load more</div>
-      </div> -->
     </div>
   </main>
 </div>
